Add info panel on filter.mdx about multiple .filter() expressions
On a customer project I saw coding having a request builder within multiple filter expressions like this:

requestBuilder()
.filter(businessPartnerApi.schema.FIRST_NAME.equals('Alice')),
.filter(businessPartnerApi.schema.LAST_NAME.notEquals('Bob'))

It was a long way down the road to clearify why this isn't working. However, I want to save some pains for other developers in the future :)
)

--- a/docs-js/features/odata/common/query-parameter/filter.mdx
+++ b/docs-js/features/odata/common/query-parameter/filter.mdx
@@ -90,3 +90,10 @@ The example above can be shortened to:
   businessPartnerApi.schema.LAST_NAME.notEquals('Bob')
 )
 ```
+
+:::note Overwritten Filters
+
+Heads Up! You are not allowed to use the `.filter()` statement multiple times on the same `requestBuilder`. It will overwrite existing filters each time within the expressions of the latest `.filter()` statement.
+Using typescript, your compiler will not throw anykind of warning about having multiple `.filter()` statements attached to your `requestBuilder`, as it's technically okay, but not supported by the SDK. 
+
+:::
